# exqudens-py-doxygen-xml2json

./: pyproject.toml  readme.md
src/main/py/exqudens/doxygen/: xml2json.py
src/test/py/: test_xml2json.py
src/test/resources/test_xml2json/TestXml2Json/test_1/: c-doxyfile.txt  config.json
src/test/resources/test_xml2json/TestXml2Json/test_1/c/exqudens/: math.c  math.h  math_util.c  math_util.h
