[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exqudens-doxygen-xml2json"
version = "1.0.0"
description = "Exqudens Doxygen Xml2Json"
requires-python = ">=3.10"
dependencies = [
    "doxmlparser==1.10.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/main/py/exqudens"]

[tool.hatch.envs.test]
dependencies = [
    "pytest==7.4.0",
]

[tool.hatch.envs.installer]
dependencies = [
    "pyinstaller==6.1.0"
]

[tool.hatch.envs.wtest]
detached = true
dependencies = [
    "pytest==7.4.0",
    "exqudens-doxygen-xml2json @ {root:uri}/dist/exqudens_doxygen_xml2json-1.0.0-py3-none-any.whl"
]
